--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,4 @@ services:
     runtime: python
     buildCommand: ./build.sh && pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: PYTHONUNBUFFERED
-        value: "1"
+    plan: free
