--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
-    name: interview-coach-backend
-    env: python
+    name: whisper-api
+    runtime: python
+    buildCommand: cd backend && chmod +x build.sh && ./build.sh && pip install -r requirements.txt
+    startCommand: cd backend && uvicorn app:app --host 0.0.0.0 --port 10000
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app:app --host=0.0.0.0 --port=10000"
-    rootDir: backend
-   
